clusters/prod-01/litomi/redis/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: redis-ha
    app.kubernetes.io/component: node
    isPrimary: "true"
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
