clusters/prod-01/litomi/redis/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
      app.kubernetes.io/instance: redis-ha
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: litomi-web
        - podSelector:
            matchLabels:
              app: litomi-backend
      ports:
        - protocol: TCP
          port: 6379
